apps/timetracker/timetracker-auth-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: timetracker-basic-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: timetracker
  basicAuth:
    users:
      name: basic-auth
